# llm-evaluation

./: .gitignore  README.md  analyzer.py  benchmark.py  client.py  config_loader.py  demo_chat.py  demo_monitor.py  monitor.py  pyproject.toml  report.py  requirements.txt  runner.py  sampler.py
config/: config.yaml  default.yaml  test_config.yaml
examples/: config.example.yaml
examples/prompts/: long.jsonl  medium.jsonl  short.jsonl
prompts/: long.jsonl  medium.jsonl  sample_prompts.jsonl  short.jsonl
tests/: test_analyzer.py  test_config_loader.py  test_deployment_context.py  test_monitor.py  test_sampler.py
utils/: __init__.py  deployment_context.py  logging_utils.py  time_utils.py
