[project]
name = "llm-eval"
version = "0.1.0"
description = "轻量化 LLM 容量测评工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "psutil>=5.9",
    "nvidia-ml-py>=12.535",
    "jinja2>=3.1",
]

[project.scripts]
llm-eval = "runner:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
